share app folder

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
         - 80:80
       volumes:
         - /var/log
+        - ./app:/usr/share/nginx/app
       links:
         - postgres
         - memcached
