--- a/composer.json
+++ b/composer.json
@@ -1,3 +1,11 @@
 {
-    "scripts" : { "post-install-cmd" : "cd app;composer install;composer update" }
+    "require": {
+        "php": "^7.0.0",
+        "ext-mbstring": "*",
+        "ext-imagick": "*",
+        "ext-mcrypt": "*",
+        "ext-redis": "*",
+        "vlucas/phpdotenv": "*"
+      },
+      "scripts" : { "post-install-cmd" : "cd app;composer install;composer update" }
 }
