--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "webpack": "webpack -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "8.x",
+    "npm": "5.x"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/netliferesearch/craftcms-docker.git"
