--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,7 @@
         "ext-redis": "*",
         "vlucas/phpdotenv": "*"
       },
-      "scripts" : { "post-install-cmd" : "cd app;composer install;composer update" }
+      "require-dev": {
+        "heroku/heroku-buildpack-php": "^125.0"
+    }
 }
