--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
 
     postgres:
       image: postgres:9.6.4
+      ports:
+        - 5432:5432
       environment:
         POSTGRES_USER: craft3beta
         POSTGRES_PASSWORD: secret
