--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
   },
   "homepage": "https://github.com/netliferesearch/craftcms-docker#readme",
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
     "browser-sync": "^2.18.13",
     "browser-sync-webpack-plugin": "^1.2.0",
+    "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.1",
+    "node-sass": "^4.5.3",
     "path": "^0.12.7",
+    "sass-loader": "^6.0.6",
     "webpack": "^3.6.0"
   }
 }
