tweak .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -5,4 +5,4 @@ DATABASE_URL=postgres://craft3beta:secret@0.0.0.0:5432/
 DB_SCHEMA=public
 
 # The prefix that should be added to generated table names (only necessary if multiple things are sharing the same database)
-DB_TABLE_PREFIX=""
+DB_TABLE_PREFIX=
