refactor. Move seed config files and the like necessary for docker setup into a docker-src folder.

--- a/docker-src/.sample.env
+++ b/docker-src/.sample.env
@@ -1,5 +1,5 @@
 
-DATABASE_URL=postgres://craft3beta:secret@0.0.0.0:5432/
+DATABASE_URL=postgresql://craft3beta:secret@postgres:5432/craft3beta
 
 # The database schema that will be used (PostgreSQL only)
 DB_SCHEMA=public
